snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
9e58fd4aa4e70e0a2d02e14438144094f06902c8